tests/calico_testcases/example_policies/testcase2tag/testcase2tag-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-networkpolicy
  namespace: kube-system
spec:
  selector: tier == 'frontend'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: has(tier)
  egress:
  - action: Allow
    destination:
      selector: has(tier)
